# spotify-version-snapshots

./: .gitignore  LICENSE  Pipfile  README.md  main.py  pyproject.toml  setup.py
docs/: dev-guide.md
spotify_snapshot/: __about__.py  __main__.py  config.py  env_utils.py  exceptions.py  gitutils.py  install.py  lockfile.py  logging.py  outputfileutils.py  spotify.py  spotify_datatypes.py  spotify_snapshot_output_manager.py
spotify_version_snapshots/: __main__.py  constants.py  gitutils.py  outputfileutils.py  spotify.py
utils/: gitutils.py  outputfileutils.py
